- Rename path to selector in bunch of places. - Try to solve iframe clipping problem. CSS is completely mind-boggling to me... - Move popup CSS code in "global" CSS.

--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -927,43 +927,6 @@ a.btn {
 	line-height: 2em;
 }
 
-/*=== Popup */
-.popup {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	padding-top: 100px;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.4);
-}
-
-.popup-content {
-	background-color: #fefefe;
-	margin: auto;
-	padding: 20px;
-	width: 80%;
-	border: 1px solid #888;
-}
-
-.popup-close {
-	float: right;
-	color: #aaa;
-	font-size: 28px;
-	font-weight: bold;
-}
-
-.popup-close:hover,
-.popup-close:focus {
-	color: #000;
-	text-decoration: none;
-	cursor: pointer;
-}
-
 /*=== "Load more" part */
 #bigMarkAsRead {
 	background: #fafafa;
